examples/invalid/test21.alice

The looking-glass hatta ()
opened 
  x was a number and x became 10.
  y was a number.
closed
